add tests and form

--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -51,9 +51,9 @@
 		<div class="col-xs-1 col-xs-offset-1">
 		  <h4>Color: </h4></div>
 		<div class="col-xs-4 col-xs-offset-1">
-      <%= f.select :color, ['gray', 'navy','red','yellow',
-      ['ligh blue', 'ltblue'],['light orange','ltorange'],'green','lavendar','plum','mint','pink',
-      ['dark orange','dkorange'],'aqua']%>
+      <%= f.select :color, ['navy','red','yellow',
+      ['light blue', 'ltblue'],['light orange','ltorange'],'green','lavendar','plum','mint','pink',
+      ['dark orange','dkorange']]%>
 		</div>
 	</div>
 	
