--- a/app/views/roster_squares/_form.html.erb
+++ b/app/views/roster_squares/_form.html.erb
@@ -1,3 +1,4 @@
+<!-- Author: Ricky Perez, contains the form for making a new square-->
 <%= form_for(roster_square) do |f| %>
   <% if roster_square.errors.any? %>
     <div id="error_explanation">
@@ -10,18 +11,21 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :square_id %>
-    <%= f.number_field :square_id %>
-  </div>
-
-  <div class="field">
-    <%= f.label :student_id %>
-    <%= f.number_field :student_id %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+  
+  
+	<!-- add square row-->
+<div class="row vertical-align add-rm-squares-row">
+	<div class="col-xs-1 col-xs-offset-1 text-right">
+		<span class="fa fa-plus" style="color: green;"></span>
+	</div>
+		<div class="col-xs-2 text-left">
+			<label for="addSquare"><h4>Add Square: </h4></label>
+		</div>
+  	<div class="form-group col-xs-2">
+        <%= f.select :square_id, options_for_select(@squares.map {|squares| ["#{squares.screen_name } - #{squares.full_name }", squares.id, {'data-id'=>squares.id}] }), class: "form-control", id: "addStud"%>
+        <!-- This the id for the student it's just hidden-->
+        <%= f.hidden_field :student_id, :value => @students.id%>
+  	</div>
+		<%= f.submit "Add Square", class:"btn btn-success"%>
+	</div>
+<%end%>
