--- a/app/views/roster_squares/edit.html.erb
+++ b/app/views/roster_squares/edit.html.erb
@@ -1,6 +1,61 @@
-<h1>Editing Roster Square</h1>
-
-<%= render 'form', roster_square: @roster_square %>
-
-<%= link_to 'Show', @roster_square %> |
-<%= link_to 'Back', roster_squares_path %>
+<!--Author: Michael Loptien and Ricky Perez -->
+<!--This page is used to display each students set of squares -->
+	<div class="container">
+		<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
+			<!-- page header -->
+			<div class="page-header vertical-align">
+				<div class="col-xs-11">
+					<h2>Student Squares<small> - behavior squares for student <%= @students.screen_name %></small></h2><!-- Dynamically fills in with school id -->
+				</div>
+				<div class="col-xs-1 center-block">
+					<div class="header-sq i-<%= @students.color %>" title="Jimmy">
+						<span class="fa fa-<%= @students.icon %> fa-3x teacher-icon"></span>
+					</div>
+				</div>
+			</div><!--End page header-->
+				<!-- student behavior Squares -->
+				<div class="row squares-row first-content-row">
+					<!-- set the squares for the specific student-->
+			    <% @roster_squares.each do |roster_square| %>
+				    <% if roster_square.student_id == @students.id %>
+				      <% square_name = set_square_name(roster_square) %>
+				    	<% square_color = set_square_color(roster_square) %>
+					   	<div class="col-xs-2">
+							<div class="square i-<%= square_color %> text-center">
+								<div class="col-xs-12">
+									<h4><%=square_name%></h4>
+								</div>
+							</div><!--End Square-->
+						</div><!--End Col -->
+					<%end%>
+		    	<%end%>
+				</div><!--End Row -->
+	
+			<!-- Calls the edit from which is the add squares select and the submit button-->
+			<%= render 'form', roster_square: @roster_square %>
+	
+			<!-- remove square row-->
+			<div class="row vertical-align add-rm-squares-row">
+				<div class="col-xs-1 col-xs-offset-1 text-right">
+					<span class="fa fa-minus" style="color: red;"></span>
+				</div>
+				<div class="col-xs-2 text-left">
+					<label for="removeSquare"><h4>Remove Square: </h4></label>
+				</div>
+				<div class="form-group col-xs-2">
+					<select class="form-control" id="addStud">
+						<!-- Loops through checking which squares the student has in the roster of squares-->
+					 <% @roster_squares.each do |roster_square| %>
+						<% @squares.each do |square| %>
+						<!-- Make sure to only check this students squares-->
+								<% if roster_square.student_id == @students.id && roster_square.square_id == square.id %>
+									<option><%= square.screen_name %> - <%= square.full_name %></option>
+								<%end%>
+						<%end%>
+					<%end%>
+					</select>
+				</div>
+				<div class="col-xs-2 text-center">
+					<button type="submit" class="btn btn-danger">Remove Square</button>
+				</div>
+			</div><!--End row -->
