--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -24,9 +24,9 @@
 		<!-- Students Square Link -->
 		<div class="col-xs-2 col-xs-offset-1 text-center" title="View/edit squares for student">
 			<div class="action-sq i-ltblue center-block">
-				<a href="student4.html"><span class="fa fa-square-o fa-4x action-icon"></span></a> <!--needs to navigate to student square page-->
+				<a href="<%= edit_roster_square_path(@student)%>"><span class="fa fa-square-o fa-4x action-icon"></span></a> <!--needs to navigate to student square page-->
 			</div>
-				<p><a href="student4.html"><span class="student-icon-text">View Squares</span></a></p>
+				<p><a href="<%= edit_roster_square_path(@student)%>"><span class="student-icon-text">View Squares</span></a></p>
 		</div> <!-- col -->
 		
 		<!--Student Notes Link -->
