--- a/app/views/graph/example.html.erb
+++ b/app/views/graph/example.html.erb
@@ -1,2 +1,4 @@
 <h1>Graph#example</h1>
 <p>Find me in app/views/graph/example.html.erb</p>
+<%= bar_chart @sessionGroup.group(:id).sum(:tally) %>
+<%= line_chart @sessionGroup.group(:id).sum(:tally) %>
