--- a/app/views/graph/main.html.erb
+++ b/app/views/graph/main.html.erb
@@ -1,2 +1,12 @@
+<!--<%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %> put in /app/views/layouts/application.html.erb to avoid including manually on each page-->
 <h1>Graph#main</h1>
 <p>Find me in app/views/graph/main.html.erb</p>
+
+<%= timeline [
+  ["Washington", "1789-04-29", "1797-03-03"],
+  ["Adams", "1797-03-03", "1801-03-03"],
+  ["Jefferson", "1801-03-03", "1809-03-03"]
+] %>
+
+<p><a href="../example">Chart Examples</a></p>
+<p><a href="../todo">todo list</a></p>
