--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <%= render 'layouts/header' %>
 <body>
+	<%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
 <!--Note from Carolyn C - logged in pages all have this container col structure-->
 <% if logged_in? %>
 	<%= render 'layouts/navbar1' %>
