graph#main links fixed

--- a/app/views/graph/example.html.erb
+++ b/app/views/graph/example.html.erb
@@ -2,3 +2,4 @@
 <p>Find me in app/views/graph/example.html.erb</p>
 <%= bar_chart @sessionGroup.group(:id).sum(:tally) %>
 <%= line_chart @sessionGroup.group(:id).sum(:tally) %>
+<p>timeline of session events</p>
