--- a/app/views/graph/main.html.erb
+++ b/app/views/graph/main.html.erb
@@ -3,10 +3,9 @@
 <p>Find me in app/views/graph/main.html.erb</p>
 
 <%= timeline [
-  ["Washington", "1789-04-29", "1797-03-03"],
-  ["Adams", "1797-03-03", "1801-03-03"],
-  ["Jefferson", "1801-03-03", "1809-03-03"]
+  ["Sprint 1", "2017-04-24", "2017-05-08"],
+  ["Sprint 2", "2017-05-08", "2017-05-22"],
 ] %>
 
-<p><a href="../example">Chart Examples</a></p>
-<p><a href="../todo">todo list</a></p>
+<p><a href="graph/example">Chart Examples</a></p>
+<p><a href="graph/todo">todo list</a></p>
