--- a/app/views/graph/main.html.erb
+++ b/app/views/graph/main.html.erb
@@ -1,4 +1,4 @@
-<!--<%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %> put in /app/views/layouts/application.html.erb to avoid including manually on each page-->
+<!--<%= javascript_include_tag "https://www.gstatic.com/charts/loader.js", "chartkick"%> put in /app/views/layouts/application.html.erb to avoid including manually on each page-->
 <h1>Graph#main</h1>
 <p>Find me in app/views/graph/main.html.erb</p>
 
