--- a/app/views/graph/todo.html.erb
+++ b/app/views/graph/todo.html.erb
@@ -1,9 +1,12 @@
 <h1>Graph#todo</h1>
 <p>Find me in app/views/graph/todo.html.erb</p>
 <h1>TODO:</h1>
-<p>make graph controller w/ views</p>
-<p>migrate code from test application</p>
-<p>confirm graphs work</p>
-<p>confirm heroku works</p>
-<p>create postgresql branch, repeat last 2 steps</p>
+<p><s>make graph controller w/ views</s></p>
+<p><s>migrate code from test application</s></p>
+<p><s>confirm graphs work</s></p>
+<p><s>confirm heroku works</s></p>
+<p>example page</p>
+<p>add /config/routes.rb and /app/controllers/application_controller.rb to ignore list for git</p>
+<p>create postgresql branch, confirm graphs and heroku still work</p>
 <p>implement group_by_date or find alternative</p>
+<p>investigate asynchronous loading</p>
