fixes the admin page links

--- a/app/views/teachers/admin.html.erb
+++ b/app/views/teachers/admin.html.erb
@@ -22,12 +22,12 @@
 	</div> <!-- col -->
 	<% end %>
 	
-	<%= link_to super_report_path(@current_teacher) do %>
+	<%= link_to admin_report_path(@current_teacher) do %>
 	<div class="col-xs-2 text-center" title="School stats and more">
 	<div class ="action-sq i-pink center-block" >
 		<span class="fa fa-file-text-o fa-4x action-icon" ></span>
 	</div>
-		<p><span class="student-icon-text">Super Report</span></p>
+		<p><span class="student-icon-text">Admin Report</span></p>
 	</div> <!-- col -->
 	<% end %>
 </div>   <!-- row -->
