changes head school names to screen_name

--- a/app/views/squares/index.html.erb
+++ b/app/views/squares/index.html.erb
@@ -7,12 +7,12 @@
 
   <!-- Dynamically fills in with school full name -->
   <div class="col-xs-11">
-	  <h2>All Squares<small> - manage behavior squares at  <%= @full_name %></small></h2>
+	  <h2>All Squares<small> - manage behavior squares at  <%= @screen_name %></small></h2>
 	</div>
 	
 	<!-- Dynamically fills in with school color, icon, and title of school -->
 	<div class="col-xs-1 center-block">
-		<div class="header-sq i-<%= @color %>" title="<%= @full_name%>">
+		<div class="header-sq i-<%= @color %>" title="<%= @screen_name%>">
 					<span class="fa fa-<%= @icon %> fa-3x teacher-icon"></span>
 		</div>
 	</div>
