switch to master to check something

--- a/app/views/graph/todo.html.erb
+++ b/app/views/graph/todo.html.erb
@@ -5,6 +5,7 @@
 <p><s>migrate code from test application</s></p>
 <p><s>confirm graphs work</s></p>
 <p><s>confirm heroku works</s></p>
+<p>code </p>
 <p>example page</p>
 <p>add /config/routes.rb and /app/controllers/application_controller.rb to ignore list for git</p>
 <p>create postgresql branch, confirm graphs and heroku still work</p>
