--- a/app/views/teachers/admin.html.erb
+++ b/app/views/teachers/admin.html.erb
@@ -4,9 +4,9 @@
 			<div class="col-xs-11">
 				<h2>Admin Dashboard<small> -  manage school teachers, students, squares, etc</small></h2><!-- Dynamically fills in with school id -->
 			</div>
-			<div class="col-xs-1 center-block">
-				<div class="header-sq i-plum" title="Admin Bianca17">
-					<span class="fa fa-apple fa-3x teacher-icon"></span>
+			<div class="col-xs-1 pull-right">
+				<div class="header-sq i-<%= @teacher.color %>" title=<%= @teacher.screen_name %>>
+					<span class="fa fa-<%= @teacher.icon %> fa-3x teacher-icon"></span>
 				</div>
 			</div>
 		</div>
