--- a/app/views/teachers/admin_report.html.erb
+++ b/app/views/teachers/admin_report.html.erb
@@ -4,9 +4,9 @@
 			<div class="col-xs-11">
 				<h2>Admin Report<small> - stats and more about your school</small></h2><!-- Dynamically fills in with school id -->
 			</div>
-			<div class="col-xs-1 center-block">
-				<div class="header-sq i-plum" title="Admin Bianca17">
-					<span class="fa fa-apple fa-3x teacher-icon"></span>
+			<div class="col-xs-1 pull-right">
+				<div class="header-sq i-<%= @current_teacher.color %>" title=<%= @current_teacher.screen_name %>>
+					<span class="fa fa-<%= @current_teacher.icon %> fa-3x teacher-icon"></span>
 				</div>
 			</div>
 		</div><!--End page header-->
@@ -22,6 +22,7 @@
 	    <table class="table table-striped table-hover table-responsive students-table">
 	   		<thead>
 	   			<tr>
+	   				<th>Student Icon</th>
 						<th>Student ID</th>
 						<th>Full Name</th>
 						<th>Contact Information</th>
@@ -31,8 +32,12 @@
 						<tbody>
 				            <% @students.each do |students| %>
 						  					<tr data-link="/students/<%= students.id %>">
-												<td><p class="listText">
-										    <p class="fa fa-home school-icon">&nbsp;&nbsp;&nbsp;<span> <%= students.screen_name %></span> </p></td>
+												<td>
+													<div class="table-sq i-<%= students.color %>">                 <!--Generate Student Color-->
+													  <i class="fa fa-<%= students.icon %> fa-2x table-icon"></i>  <!--Generate Student Icon-->
+												  </div>
+												</td>	
+												<td><p class="listText"><span> <%= students.screen_name %></span> </p></td>
 										    <td><p class="listText"><span> <%= students.full_name %></span> </p></td>
 										    <td><p class="listText"><span> <%= students.contact_info %></span> </p></td>
 				  		      		</tr>
