--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -80,6 +80,7 @@ body
 /*********************************************************
 *  ICON STYLING
 *********************************************************/
+/*Big square used on home and session screen*/
 .square
 {
 	height: 8em;
@@ -100,6 +101,7 @@ body
 	transform:scale(1.1);
 }
 
+/*Special square used by session screen*/
 .sq-studSesh
 {
 	height: 8em;
@@ -154,30 +156,15 @@ body
 {
 	color: #FFFFFF;
 }
-/* Used for teacher profile icon  and smaller student icons */
-.profile-sq
-{
-	height: 3.5em;
-	width: 3.5em;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border-radius: 10px;
-}
 
-.b-square
-{
-	height: 8em;
-	width: 8em;
-	border-radius: 25px;
-
+border-radius: 10px;
 }
 
 /*********************************************************
 *  PROF BILL is STYLIN'
 *  merge these into proper categories after the demo?
 *********************************************************/
-
+/* Used for teacher profile icon  and smaller student icons */
 .header-sq
 {
 	height: 3.5em;
@@ -201,21 +188,17 @@ body
 	justify-content: center;
 	border-radius: 10px;
 
-transition: all .2s ease-in-out;
+	transition: all .2s ease-in-out;
 }
 .action-sq:hover {
 	-webkit-transform: scale(1.1);
 	-moz-transform: scale(1.1);
 	-o-transform:scale(1.1);
 	transform:scale(1.1);
-
 }
 .action-icon {
 	font-size: 6em;
 	color: white;
-}
-.action-icon:hover {
-
 }
 
 .logout-art {
@@ -276,10 +259,6 @@ transition: all .2s ease-in-out;
 *  TABLE STYLING
 *  Used for admin screens
 *********************************************************/
-.table-striped > tbody > tr:nth-of-type(odd)
-{
- 
-}
 .table-striped > tbody > tr:hover td{
   background-color: #FFEB65;
 }
