--- a/app/views/squares/new.html.erb
+++ b/app/views/squares/new.html.erb
@@ -5,7 +5,7 @@
 	
   <!-- Dynamically fills in with school full name -->
 	<div class="col-xs-11">
-	  <h2>New Square<small> - add a new behavior square to school <%= @full_name %></small></h2>
+	  <h2>New Square<small> - add a new behavior square to school <%= @screen_name %></small></h2>
 	</div>
 	
 	<!-- Dynamically fills in with school color, icon, and title of school -->
