--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -3,6 +3,7 @@
 <p id="notice"><%= notice %></p>
 
 <!-- Page Header -->
+<%= render 'layouts/flash' %>
 <div class="page-header vertical-align">
   
   <!-- Dynamically fills in with school full name -->
@@ -12,7 +13,7 @@
 	
 	<!-- Dynamically fills in with school color, icon, and title of school -->
 	<div class="col-xs-1 center-block">
-		<div class="header-sq i-<%= @color %>" title="<%= @screen_name%>">
+		<div class="header-sq i-<%= @color %>" title="<%= @full_name%>">
 					<span class="fa fa-<%= @icon %> fa-3x teacher-icon"></span>
 		</div>
 	</div>
@@ -29,11 +30,12 @@
 			  <i class="fa fa-plus-square-o"></i> New Student
 			</button>
 		</form>
-  </div>   <!-- col -->
-</div>    <!-- row -->
+  </div>
+</div>
 
 <br>
 
+<!-- Start of Table -->
 <table class="table table-striped table-hover table-responsive schools-table">
   
   <!-- Table Header -->
@@ -55,17 +57,24 @@
         
         <!-- Display the students symbol + color comdo --> 
         <td>
-          <div class="table-sq i-<%= student.color %>">                 <!--Generate Student Color-->
-					  <i class="fa fa-<%= student.icon %> fa-2x table-icon"></i>  <!--Generate Student Icon-->
+          <div class="table-sq i-<%= student.color %>">                 
+					  <i class="fa fa-<%= student.icon %> fa-2x table-icon"></i>
 				  </div>
         </td>
         
         <!-- Displays the students screen name -->
         <td><%= student.screen_name %></td>
         
-        <!-- Displays the students last ran session -->
+        <!-- Displays the student full name -->
         <td><%= student.full_name %></td>
-        <% this_session =  @sessions.where(session_student: student.id).last %>
+        
+        <!-- 
+        Displays the students last ran session
+        querys the last session from current student
+        if not nil display the end time
+        if it is nil then show default message
+        -->
+        <% this_session = @sessions.where(session_student: student.id).last %>
         <% if this_session != nil %>
           <td><%= this_session.end_time %></td>
         <% else %>
