--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -3,12 +3,12 @@
 <!-- Page Header -->
 <div class="page-header vertical-align">
   
-  <!-- Dynamically fills in with school full name -->
+  <!-- Fills in school screen name -->
 	<div class="col-xs-11">
-	  <h2>New Student<small> - add a student to school <%= @full_name %></small></h2>
+	  <h2>New Student<small> - add a student to school <%= @screen_name %></small></h2>
 	</div>
 	
-	<!-- Dynamically fills in with school color, icon, and title of school -->
+	<!-- Fills in with school color, icon, and full name of school -->
 	<div class="col-xs-1 center-block">
 		<div class="header-sq i-<%= @color %>" title="<%= @full_name%>">
 					<span class="fa fa-<%= @icon %> fa-3x teacher-icon"></span>
@@ -17,4 +17,5 @@
 </div>
 <!--End page header-->
 
+<!-- Render the form -->
 <%= render 'form', student: @student, isNew: true %>
