--- a/app/views/squares/edit.html.erb
+++ b/app/views/squares/edit.html.erb
@@ -1,14 +1,15 @@
-<!--Ricky Perez & Michael Loptien-->
+<!-- authors: Ricky Perez & Michael Loptien -->
+<!-- edit view for squares, renders _form -->
 
 <!-- Page Header -->
 <div class="page-header vertical-align">
 	
-	<!-- Dynamically fills in with square screen name -->
+	<!-- Fills in with square screen name -->
 	<div class="col-xs-11">
-		<h2>Square Profile<small> - view/edit behavior square <%= @square.screen_name %></small></h2><!-- Dynamically fills in with school id -->
+		<h2>Square Profile<small> - view/edit behavior square <%= @square.screen_name %></small></h2>
 	</div>
 	
-	<!-- Dynamically fills in Square icon, color, & float over name -->
+	<!-- Fills in Square icon, color, & float over name -->
 	<div class="col-xs-1 center-block">
 		<div class="header-sq i-<%= @square.color %>" title="<%= @square.screen_name %>">
       <span class="fa fa-square-o fa-3x teacher-icon"></span>
