--- a/app/views/squares/new.html.erb
+++ b/app/views/squares/new.html.erb
@@ -1,19 +1,21 @@
-<!--Ricky Perez & Michael Loptien-->
+<!-- authors: Ricky Perez & Michael Loptien -->
+<!-- new view for squares, renderd _form -->
 
 <!-- Page Header -->
 <div class="page-header vertical-align">
 	
-  <!-- Dynamically fills in with school full name -->
+  <!-- Fills in with school screen name -->
 	<div class="col-xs-11">
 	  <h2>New Square<small> - add a new behavior square to school <%= @screen_name %></small></h2>
 	</div>
 	
-	<!-- Dynamically fills in with school color, icon, and title of school -->
+	<!-- Fills in with school color, icon, and full name of school -->
 	<div class="col-xs-1 center-block">
 		<div class="header-sq i-<%= @color %>" title="<%= @full_name%>">
 					<span class="fa fa-<%= @icon %> fa-3x teacher-icon"></span>
 		</div>
 	</div>
+	
 </div>
 <!--End page header-->
 
