--- a/app/views/layouts/_profile_admin_version.html.erb
+++ b/app/views/layouts/_profile_admin_version.html.erb
@@ -1,100 +1,104 @@
-
+<!--This is the admin version of the profile view. They can change anything. -->
 <%= form_for(@teacher) do |f| %>
-  <% if @teacher.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@teacher.errors.count, "error") %> prohibited this teacher from being saved:</h2>
-      <ul>
-	      <% @teacher.errors.full_messages.each do |message| %>
-	        <li><%= message %></li>
-	      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-	<div class="row form-row">
-		<!-- Teacher ID -->
-		<div class="col-sm-2 col-sm-offset-1"><h4> Teacher ID: </h4></div>
-		<div class="col-sm-2">
-			<%= f.text_field :user_name, class: 'form-control', id: 'teacherID' %>
-		</div>
-	</div>
-	
-	<!-- Teacher name field -->
-	<div class="row form-row">
-		<div class="col-xs-1 col-xs-offset-1"><h4>Name: </h4></div>
-		<div class="col-xs-4 col-xs-offset-1">
-			<%= f.text_field :full_name, class: 'form-control', id: 'teacherName' %>
-		</div>
-	</div><!-- row -->
-	
-	<!-- Teacher screen_name field -->
-	<div class="row form-row">
-		<div class="col-xs-1 col-xs-offset-1"><h4>Short Name: </h4></div>
-		<div class="col-xs-4 col-xs-offset-1">
-			<%= f.text_field :screen_name, class: 'form-control'%><!--no ID yet-->
-		</div>
-	</div>   <!-- row -->
-	
-	<!-- Teacher Email -->
-	<div class="row form-row">
-		<div class="col-sm-offset-1 col-sm-2"><h4>Email: </h4></div>
-		<div class="col-sm-4 col-sm-offset-0">
-			<%= f.email_field :email, class: 'form-control', id: 'email' %>
-		</div>
-	</div>
-	
-	<!--Teacher Admin -->
-	<div class="row form-row vertical-align">
-		<div class="col-sm-offset-1 col-sm-2"><h4>Access: </h4></div>
-	    <div class="col-sm-4 col-sm-offset-0">
-  			<%= f.select :powers, ["SessionOnly", "Teacher", "Admin"], 
-  			class: 'form-control'%>
-  		</div>
-	</div>
-	
-	<!-- a little extra space after name/email -->
-	<div class="form-spacer">	&nbsp;</div>
-	<div class="row form-row vertical-align">
-		<div class="col-sm-offset-1 col-sm-2"><h4>Color: </h4></div>
-		<div class="col-sm-4 col-sm-offset-0">
-			<!--A roundabout way of making ltblue display as light blue.-->
-			<% if @teacher.color == 'ltblue' %>
-				<%= f.select :color, options_for_select(colorNames, :selected => 'light blue'), 
-				class: 'form-control' %>
-			<% end %>
-			
-			<!--Otherwise, the value is drawn naturally from the model entry. -->
-			<% if @teacher.color != 'ltblue' %>
-				<%= f.select :color, colorNames, class: 'form-control' %>
-			<% end %>
-		</div>
-	</div>
-	
-	<!-- teacher icon field -->
-	<div class="row form-row">
-		<div class="col-xs-1 col-xs-offset-1"><h4>Icon: </h4></div>
-		<div class="col-xs-4 col-xs-offset-1">
-			<%= f.select :icon, teacherIcons, class: 'form-control' %>
-		</div>
-	</div>
-	
-	<div class="row form-row">
-		<div class="col-sm-offset-1 col-sm-2"><h4>Description: </h4></div>
-		<div class="col-sm-6 col-sm-offset-0">
-			<%= f.text_field :description, class: 'form-control', id: 'Description' %>
-		</div>
-	</div>  
-	
-	<div class="row form-row">
-		<div class="col-sm-1 col-sm-offset-1"><br></div>
-	</div>
-	
-	<div class="row action-buttons-row">
-		<div class="col-sm-1 col-sm-offset-1"> 
-			<%= f.submit "Save Changes", class: "btn btn-success" %>
-		</div>
+<% if @teacher.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@teacher.errors.count, "error") %> prohibited this teacher from being saved:</h2>
+    <ul>
+      <% @teacher.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
-  	<div class="col-sm-1 col-sm-offset-1"> 
-  		<%= button_to "Cancel", teachers_path, :class => "btn btn-danger", :method => :get %>
-  	</div>
-  </div> 
+
+<div class="row form-row">
+	<!-- Teacher ID -->
+	<div class="col-sm-2 col-sm-offset-1"><h4> Teacher ID: </h4></div>
+	<div class="col-sm-2">
+		<%= f.text_field :user_name, class: 'form-control', id: 'teacherID' %>
+	</div>
+</div>
+
+<!-- Teacher name field -->
+<div class="row form-row">
+	<div class="col-xs-1 col-xs-offset-1"><h4>Name: </h4></div>
+	<div class="col-xs-4 col-xs-offset-1">
+		<%= f.text_field :full_name, class: 'form-control', id: 'teacherName' %>
+	</div>
+</div><!-- row -->
+
+<!-- Teacher screen_name field -->
+<div class="row form-row">
+	<div class="col-xs-1 col-xs-offset-1"><h4>Short Name: </h4></div>
+	<div class="col-xs-4 col-xs-offset-1">
+		<%= f.text_field :screen_name, class: 'form-control'%><!--no ID yet-->
+	</div>
+</div>   <!-- row -->
+
+<!-- Teacher Email -->
+<div class="row form-row">
+	<div class="col-sm-offset-1 col-sm-2"><h4>Email: </h4></div>
+	<div class="col-sm-4 col-sm-offset-0">
+		<%= f.email_field :email, class: 'form-control', id: 'email' %>
+	</div>
+</div>
+
+<!--Teacher Admin -->
+<div class="row form-row vertical-align">
+	<div class="col-sm-offset-1 col-sm-2"><h4>Access: </h4></div>
+    <div class="col-sm-4 col-sm-offset-0">
+			<%= f.select :powers, ["SessionOnly", "Teacher", "Admin"], 
+			class: 'form-control'%>
+		</div>
+</div>
+
+<!-- a little extra space after name/email -->
+<div class="form-spacer">	&nbsp;</div>
+<div class="row form-row vertical-align">
+	<div class="col-sm-offset-1 col-sm-2"><h4>Color: </h4></div>
+	<div class="col-sm-4 col-sm-offset-0">
+		<!--A roundabout way of making ltblue display as light blue.-->
+		<% if @teacher.color == 'ltblue' %>
+			<%= f.select :color, options_for_select(colorNames, :selected => 'light blue'), 
+			class: 'form-control' %>
+		<% end %>
+		
+		<!--Otherwise, the value is drawn naturally from the model entry. -->
+		<% if @teacher.color != 'ltblue' %>
+			<%= f.select :color, colorNames, class: 'form-control' %>
+		<% end %>
+	</div>
+</div>
+
+<!-- teacher icon field -->
+<div class="row form-row">
+	<div class="col-xs-1 col-xs-offset-1"><h4>Icon: </h4></div>
+	<div class="col-xs-4 col-xs-offset-1">
+		<%= f.select :icon, teacherIcons, class: 'form-control' %>
+	</div>
+</div>
+
+<div class="row form-row">
+	<div class="col-sm-offset-1 col-sm-2"><h4>Description: </h4></div>
+	<div class="col-sm-6 col-sm-offset-0">
+		<%= f.text_field :description, class: 'form-control', id: 'Description' %>
+	</div>
+</div>  
+
+<div class="row form-row">
+	<div class="col-sm-1 col-sm-offset-1"><br></div>
+</div>
+
+<div class="row action-buttons-row">
+	<div class="col-sm-1 col-sm-offset-1"> 
+	  <%= button_tag(type: 'submit', class: "btn btn-success") do %>  
+	  	Save Changes 
+	  <% end %>
+	</div>
+<% end %>
+	<!--This needs to be outside of the form, otherwise its function is overridden
+	    and it becomes another submit button.-->
+	<div class="col-sm-1 col-sm-offset-1"> 
+		<%= button_to "Cancel", teachers_path, :class => "btn btn-danger", :method => :get %>
+	</div>
+</div>
