--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -3,7 +3,7 @@
 
 <div class="page-header cap17-header vertical-align">
 	<div class="col-xs-11">
-		<h2>Teacher profile for <%= @teacher.full_name %></h2>
+		<h2>Teacher profile for <%= @teacher.screen_name %></h2>
 	</div>
 	<div class="col-xs-1">
 	<div class="table-sq i-<%= @teacher.color%>" title=<%= @teacher.screen_name %>>
