--- a/app/views/teachers/new.html.erb
+++ b/app/views/teachers/new.html.erb
@@ -25,7 +25,7 @@
 	
 	<div class="row form-row">
 		<!-- Teacher ID -->
-		<div class="col-sm-2 col-sm-offset-1"><h4> Teacher ID: </h4></div>
+		<div class="col-sm-2 col-sm-offset-1"><h4>Username: </h4></div>
 		<div class="col-sm-2">
 			<%= f.text_field :user_name, class: 'form-control', id: 'teacherID' %>
 		</div>
@@ -41,7 +41,7 @@
 	
   <!-- Teacher screen_name field -->
 	<div class="row form-row">
-	<div class="col-xs-1 col-xs-offset-1"><h4>Short Name: </h4></div>
+	<div class="col-xs-1 col-xs-offset-1"><h4>Teacher ID: </h4></div>
 		<div class="col-xs-4 col-xs-offset-1">
 			<%= f.text_field :screen_name, class: 'form-control'%><!--no ID yet-->
 		</div>
@@ -126,10 +126,9 @@
 	  		Add New Teacher
 	  	<% end %>
 		</div>
-<% end %>
-	<!--This needs to be outside of the form, otherwise its function is overridden
-	    and it becomes another submit button.-->
-	<div class="col-sm-1 col-sm-offset-1"> 
-		<%= button_to "Cancel", teachers_path, :class => "btn btn-danger", :method => :get %>
+		<div class="col-sm-1 col-sm-offset-1"> 
+			<%= link_to "Cancel", teachers_path, :class => "btn btn-danger" %>
+		</div>
 	</div>
-</div>
+<% end %>
+
