major QoL fixes in admin and super

--- a/app/views/teachers/admin_report.html.erb
+++ b/app/views/teachers/admin_report.html.erb
@@ -112,13 +112,9 @@
 
 				<br><br>
 			</p>
-			<p>
-				A table of info or a PDF report on the school.
-				<br><br>
-			</p>
 		
 			<!-- bottom padding for demo only -->
 			<p style="padding-bottom: 100px;"></p>
 
 		</div>   <!-- content-text -->
-<%= link_to 'Return to Super Dashboard', schools_path %>
+<%= link_to 'Return to Admin Dashboard', admin_path %>
