--- a/app/views/teachers/super_report.html.erb
+++ b/app/views/teachers/super_report.html.erb
@@ -23,14 +23,6 @@
 				These <%=Teacher.count%> teachers have observed <%=Square.count%> behavior Squares, and maintained <%=Session.count%> Sessions since (Deploy Date Here)
 				<br><br><br><br>
 			</h4>
-			<p>
-				Statistics:
-				<br><br>
-			</p>
-			<p>
-				Bill's Notes:
-				<br><br>
-			</p>
 		
 			<!-- bottom padding for demo only -->
 			<p style="padding-bottom: 100px;"></p>
@@ -39,4 +31,4 @@
 	</div><!--End content col-->
 </div><!--End container-->
 
-<%= link_to 'Return to Super Dashboard', schools_path %>
+<%= link_to 'Return to Super Dashboard', super_path %>
