about art page text

--- a/app/views/static_pages/about2.html.erb
+++ b/app/views/static_pages/about2.html.erb
@@ -13,17 +13,29 @@
 				</div>
 			</div>
 		</div><!--End page header-->
-
+		<!-- Start Text -->
 		<div class="row content-text">
 			<br>
 			<p>
-				Describe the artwork feature/program. 
+				The Dinner Out logout screen features artwork by a student with autism.
+			</p>	
+			<p>
+				The image is happily chosen at random from our gallery of student art.
+			</p><br>
+                  You can send us the artwork of your student(s). We would love to add it to our gallery.
 			</p>
 			<p>
-				Include an email to send us more cool student artwork.
+                Just email an image (any size or shape, we'll edit) and the student's name (or nickname) to:
 			</p>
-				
-			<!-- bottom padding for demo only -->
+			<p style="padding-left: 40px;">
+				 Prof Bill, North Central College<br>
+				<a href="mailto:wtkrieger@noctrl.edu">wtkrieger@noctrl.edu</a>
+				<br><br>
+			</p>
+			<br>
+			<p> Thank You</p>
+			<!-- End Text -->	
+			<!-- bottom padding -->
 			<p style="padding-bottom: 100px;"></p>
 		</div>   <!-- row -->
 	</div>
