--- a/app/views/schools/suspend.html.erb
+++ b/app/views/schools/suspend.html.erb
@@ -17,10 +17,10 @@
 		
 		<div class="row first-content-row content-text">
 			<p>
-				Suspend logins at Super User's focus school: <span style="color: red; font-size: 1.4em; font-weight: bold;">The Monarch School</span>
+				Suspend logins at Super User's focus school: <span style="color: red; font-size: 1.4em; font-weight: bold;"><%= @school_name %></span>
 			</p>
 			<p>
-				This school has: <span style="color: red; font-size: 1.4em; font-weight: bold;">21 teachers</span>
+				This school has: <span style="color: red; font-size: 1.4em; font-weight: bold;"><%= @teacher_count %> teachers</span>
 			</p>
 
 			<form class="form-horizontal" action="super">
