work in progres

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,12 +1,25 @@
-
-			<!-- page header -->
-			<div class="page-header">
-				<h2>Help <small> - frequently asked questions about Dinner Out
-					<div class ="header-sq i-gray pull-right" title="Super User!">
-						<span class="fa fa-question fa-2x header-icon"></span>
-					</div>
-				</small></h2>
+   	<!-- page header -->
+		<div class="page-header vertical-align">
+			<div class="col-xs-11">
+				<h2>Help<small> - frequently asked questions about Dinner Out</small></h2><!-- Dynamically fills in with school id -->
 			</div>
+			<div class="col-xs-1 center-block">
+				<div class="header-sq i-gray" title="Help page">
+					<span class="fa fa-question-circle-o fa-3x teacher-icon"></span>
+				</div>
+			</div>
+		</div><!--End page header-->
+		
+		<!-- intro text -->
+		<div class="row content-text">
+			<p>
+				<br>
+				Here are the answers to 20 questions (frequently asked) about Dinner Out. 
+			</p>
+			<p>
+				Select a section icon or just scroll down for help.
+			</p>
+		</div>
 
 			<!-- page content, just text -->
 			<div class="content-text">
@@ -14,106 +27,87 @@
 				<form class="form-horizontal" action="school1.html"></form>
             <div class="row">
                 <br>
-                <div class="col-xs-2 col-xs-offset-1 text-center">
-                  <!--   <div class="fa fa-circle fa-3x" style="color:red" aria-hidden="true"></div>-->  <!-- commented out image... off center -->
-                    <a href="#sessions">Sessions Help</a>
-                </div>
-                <div class="col-xs-2 col-xs-offset-1 text-center">
-                 <!--    <div class="fa fa-circle fa-3x" style="color:red" aria-hidden="true"></div>-->   <!-- commented out image... off center -->
-                    <a href="#Students">Students Help</a>
-                </div>
-                <div class="col-xs-2 col-xs-offset-1 text-center">
-                  <!--   <div class="fa fa-circle fa-3x" style="color:red" aria-hidden="true"></div>-->    <!-- commented out image... off center -->
-                    <a href="#Reports">Reports Help</a>
-                </div>
-                <div class="col-xs-2 col-xs-offset-1 text-center">
-                  <!--   <div class="fa fa-circle fa-3x" style="color:red" aria-hidden="true"></div>-->   <!-- commented out image... off center -->
-                    <a href="#Admin">Admin Help</a>
-                </div>
-            </div>
-            <div class="row">                          <!--Blank rows to ad space to page -->
-                <div class="col-lg-6"></div>
-                <!--Blank row -->
-                <div class="col-lg-6"></div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6"></div>
-                <!--Blank row -->
-                <div class="col-lg-6"></div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6"></div>
-                <!--Blank row -->
-                <div class="col-lg-6"></div>
-            </div>
-        </div>
-       
-    <!--End Container Fluid-->
+               <!-- action icons, row 2 -->
+		<div class="row action-icon-row" >
+			<div class="col-xs-2 col-xs-offset-1 text-center" title="Backup all data of Super's focus school">
+				<div class ="action-sq i-navy center-block" >
+					<a href="#getting-started"><span class="fa fa-paper-plane-o fa-4x action-icon" ></span></a>
+				</div>
+				<p><a href="#getting-started"><span class="student-icon-text">Getting started</span></a></p>
+			</div> <!-- col -->
+			<div class="col-xs-2 text-center" title="Suspend all teacher logins of Super's focus school">
+				<div class ="action-sq i-red center-block">
+					<a href="#sessions"><span class="fa fa-key fa-4x action-icon"></span></a>
+				</div>
+				<p><a href="#sessions"><span class="student-icon-text">Sessions</span></a></p>
+			</div><!-- col -->
+			<div class="col-xs-2 text-center" title="Restore all teacher logins of Super's focus school">
+				<div class ="action-sq i-yellow center-block">
+					<a href="#admin-powers"><span class="fa fa-trophy fa-4x action-icon"></span></a>
+				</div>
+				<p><a href="#admin-powers"><span class="student-icon-text">Admin powers</span></a></p>
+			</div><!-- col -->
+			<div class="col-xs-2 text-center" title="Restore all teacher logins of Super's focus school">
+				<div class ="action-sq i-ltblue center-block">
+					<a href="#etc"><span class="fa fa-shower fa-4x action-icon"></span></a>
+				</div>
+				<p><a href="#etc"><span class="student-icon-text">Etc</span></a></p>
+			</div><!-- col -->
+		</div><!-- row -->                        <!--Blank rows to ad space to page -->
+               <!-- page content, just text -->
+		<div class="row content-text">
+			<a name="getting-started"></a>
+			<h3 class="help-header">Getting Started &nbsp; <span class="fa fa-paper-plane-o fa-fw fa-1x i-navy help-small-sq" ></span> </h3>
+			<p>
+				<span class="help-qa-letter">Q1:</span> What is Dinner Out?
+			</p>
+			<p class="help-answer-para">
+				<span class="help-qa-letter">A:</span> Dinner out is a web application that collects and analyzes behavioral data for students with autism.<br>
+				The program was created by computer science students at <a href="http://www.noctrl.edu">North Central College</a>. 
+				You can read more at the <a href="about">About page</a>.
+			</p>
+			
+			<hr class="help-line">
+			
+			<p>
+				<span class="help-qa-letter">Q2:</span> What is another question?
+			</p>
+			<p class="help-answer-para">
+				<span class="help-qa-letter">A:</span> Another question is a placeholder until Prof Bill gets his act together. (ha)
+			</p>
+			
+			<hr class="help-line">
 
-    <div class="row">
-        <a name="sessions" a style="text-decoration: none;">
-            <center>
-                <h2>Sessions:</h2>
-                <h3> Q.  My student behavior squares are not there.</h3>
-                <h4> A. You must talk to the admin to add a square to the session.</h4>
-                <br>
+			<a name="sessions"></a>
+			<h3 class="help-header">Sessions &nbsp;  <span class="fa fa-key fa-fw fa-1x i-red help-small-sq" ></span></h1>
+			<p>
+				<span class="help-qa-letter">Q3:</span> Are these question numbers working? Is 20 questions too goofy?
+			</p>
+			<p class="help-answer-para">
+				<span class="help-qa-letter">A:</span> We shall see. It does make help at least <i>a little</i> more fun.<br>
+				The last question is always: how do I get more help? And the answer is my email.
+			</p>
+			
+			<hr class="help-line">
+			
+				<a name="admin-powers"></a>
+			<h3 class="help-header">Admin Powers &nbsp;  <span class="fa fa-trophy fa-fw fa-1x i-yellow center-block-small-sq" ></span></h1>
+			<p>
+				<span class="help-qa-letter">Q3:</span> Are these question numbers working? Is 20 questions too goofy?
+			</p>
+			<p class="help-answer-para">
+				<span class="help-qa-letter">A:</span> We shall see. It does make help at least <i>a little</i> more fun.<br>
+				The last question is always: how do I get more help? And the answer is my email.
+			</p>
+			
+			<hr class="help-line">
 
-                <h3> Q.  I started a session with the wrong student.</h3>
-                <h4> A. Click the dinner out logo and pick a different student</h4>
-                <br>
+			<!-- bottom padding for demo only -->
+			<p style="padding-bottom: 100px;"></p>
+				
+		</div>   <!-- row -->
 
-                <h3> Q.  I clicked on the wrong behavior square</h3>
-                <h4> A. Click on the “undo” button to undo the last click
-                  </h4></center>
-        </a>
-        <br>
-        <br>
-        <br>
-    </div>
-    <!--Start text questions about Students-->
-    <div class="row">
-        <a name="Students" a style="text-decoration: none;">
-            <center>
-                <h2>Student:</h2>
-                <h3> Q.  I can’t see the student on my page.</h3>
-                <h4> A.  Click on the dropdown menu for a list of your students.<br>
-                     A.  If your student is not in the drop down, talk with an admin.<br><br>
-                  </h4></center>
-        </a>
-        <br>
-        <br>
-        <br>
-        <div class="col-lg-6"></div>
-        <!--Start text questions about reports-->
-
-        <div class="row">
-            <a name="Reports" a style="text-decoration: none;">
-                <center>
-                    <h2>Reports:</h2>
-                    <h3> Q.  I can’t see past student reports.</h3>
-                    <h4> A.  You must have admin rights to see past session reports.<br>
-                     A.  If you are an admin and still can't see reports, talk with an admin.<br>
-                  </h4></center>
-            </a>
-            <br>
-            <br>
-            <div class="col-lg-6"></div>
-            <!--Blank row -->
-            <!--Start text questions about admin-->
-        </div>
-        <div class="row">
-            <a name="Admin" a style="text-decoration: none;">
-                <center>
-                    <h2>Admin:</h2>
-                    <h3> Q.  How do I add a new student?</h3>
-                    <h4> A. Click on “all students”, then click on “new student.”</h4>
-                    <br>
-                    <br>
-
-                    <h3> Q. How do I add a new teacher?</h3>
-                    <h4> A. Click on “all teachers”, then click on “New Teacher.”<br><br>
-                  </h4></center>
-            </a>
+	</div><!--End content col-->
             <br>
             <br>
             <br>
