--- a/app/views/teachers/admin.html.erb
+++ b/app/views/teachers/admin.html.erb
@@ -1,4 +1,4 @@
-<!-- Andy A and UX team  Edited by Robert Herrera -->
+<!-- UX team  Edited by Robert Herrera and Dakota B -->
 
 <!-- page header -->
 	<div class="page-header vertical-align">
