--- a/app/views/teachers/super_report.html.erb
+++ b/app/views/teachers/super_report.html.erb
@@ -14,20 +14,18 @@
 			</div>
 		</div><!--End page header-->
 
-		<!-- content, just text -->
+		<!-- content, just some basic statistics -->
 		<div class="row content-text">
 			<br>
 			<h4>
+				<!-- Shows the total number of records present in Schools, teachers, students, squares and sessions. -->
 				There are currently <%=Teacher.count%> Teachers, helping to promote the education <%=Student.count%> students, across <%=School.count%> schools.
 				<br><br><br>
 				These <%=Teacher.count%> teachers have observed <%=Square.count%> behavior Squares, and maintained <%=Session.count%> Sessions since (Deploy Date Here)
 				<br><br><br><br>
 			</h4>
+		</div>
 		
-			<!-- bottom padding for demo only -->
-			<p style="padding-bottom: 100px;"></p>
-		</div>   <!-- row -->
-
 	</div><!--End content col-->
 </div><!--End container-->
 
