--- a/app/views/schools/backup.html.erb
+++ b/app/views/schools/backup.html.erb
@@ -1,4 +1,4 @@
-<!-- UX Team. Edited by Robert Herrera -->
+<!-- UX Team. Edited by Robert Herrera and Dakota B -->
 <div class="container">
 	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
 		
@@ -16,7 +16,7 @@
 		
 		<div class="row first-content-row content-text">
 			<p>
-				Backup the Super User's focus school: <span style="color: blue; font-size: 1.4em; font-weight: bold;">The Monarch School</span>
+				Backup the Super User's focus school: <span style="color: blue; font-size: 1.4em; font-weight: bold;"><%= @school_name %></span>
 			</p>
 			<p>
 				The backup will be saved to file: <span style="color: gray; font-size: 1.4em; font-weight: bold;">TMS_backup.txt</span>
