--- a/app/views/schools/suspend.html.erb
+++ b/app/views/schools/suspend.html.erb
@@ -1,4 +1,4 @@
-<!-- UX Team. Edited by Robert Herrera -->
+<!-- UX Team. Edited by Robert Herrera and Dakota B -->
 <div class="container">
 	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
 
