Change some teahcer routes/redirects

--- a/app/views/teachers/edit_password.html.erb
+++ b/app/views/teachers/edit_password.html.erb
@@ -55,7 +55,7 @@
 	
 	<div class="row action-buttons-row">
 		<div class="col-sm-1 col-sm-offset-1"> 
-			<%= f.submit "Update Password", class: "btn btn-success" %>
+			<%= button_tag(type: 'submit', class: "btn btn-success") do %>  Update Password <%end%>
 		</div>
 		<div class="col-sm-1 col-sm-offset-1"> 
 			<%= link_to "Cancel", teachers_path, :class => "btn btn-danger" %>
