--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -18,7 +18,7 @@
 		<div class="row form-row vertical-align">
 			<div class="form-group col-sm-7">
 				<label for="addStud">Add Student to Roster</label>
-				<%= select_tag 'add_student_id', options_from_collection_for_select(@students_not_in_roster_but_at_school, "id", "full_name"), class: 'form-control', id:"addStud" %>
+				<%= select_tag 'add_student_id', options_from_collection_for_select(@students_not_in_roster, "id", "full_name"), class: 'form-control', id:"addStud" %>
 			</div>
 			<div class="col-sm-1">
 				<%= button_tag(type: 'submit', class: "btn btn-success", id: "addStudBtn", name: "add_student") do %> <i class="fa fa-plus icon-white"></i> <% end %>
