Add dynamic teacher icon on edit password page

--- a/app/views/teachers/edit_password.html.erb
+++ b/app/views/teachers/edit_password.html.erb
@@ -5,11 +5,7 @@
 	<div class="col-xs-11">
 		<h2>Change Password<small> - change password for teacher <%= @teacher.full_name %></small></h2>
 	</div>
-	<div class="col-xs-1">
-		<div class="header-sq i-plum" title=<%= @teacher.screen_name %>>
-			<span class="fa fa-apple fa-3x teacher-icon "></span>
-		</div>
-	</div>
+	<%= render 'layouts/current_teacher_icon' %>
 </div>
 
 <!-- Main Content -->
