--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -3,11 +3,7 @@
 	<div class="col-xs-11">
 		<h2>Student Roster<small> - students accessible to teacher <%= @teacher.full_name %></small></h2>
 	</div>
-	<div class="col-xs-1">
-		<div class="table-sq i-<%= @teacher.color%>" title=<%= @teacher.screen_name %>>
-			<span class="fa fa-<%= @teacher.icon%> fa-2x teacher-icon"></span>
-		</div>
-	</div>
+	<%= render 'layouts/current_teacher_icon' %>
 </div>
 
 <!-- Roster Form -->
