Added some comments fixed spelling errors

--- a/app/views/session_events/_form.html.erb
+++ b/app/views/session_events/_form.html.erb
@@ -1,3 +1,4 @@
+<!--  Authors Matthew O, Alex P, Debra J -->
 <%= form_for(session_event) do |f| %>
   <% if session_event.errors.any? %>
     <div id="error_explanation">
