--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -173,6 +173,12 @@ body
 
 }
 
+/*This fixes the weird ruby buttons*/
+.btnFix
+{
+	width:150px;
+}
+
 /*********************************************************
 *  PROF BILL is STYLIN'
 *  merge these into proper categories after the demo?
