--- a/app/views/teachers/home.html.erb
+++ b/app/views/teachers/home.html.erb
@@ -1,4 +1,4 @@
-<!-- @author: Matthew O & Alex P -->
+<!-- @author: Matthew O & Alex P  & Debra J-->
 
 <!-- Control the selection and unselection of the student roster -->
 <script>
