--- a/app/views/login_session/new.html.erb
+++ b/app/views/login_session/new.html.erb
@@ -1,6 +1,6 @@
 <%= render 'layouts/navbar2' %>
 <!--Login Area -->
-<div class="container-fluid">
+<div class="container-fluid" data-no-turbolink="true">
 	<div class="row login-row">
 		<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4 well login-col">
 
@@ -10,11 +10,10 @@
 			<!--                Login Area                  -->
 			<!--   Author: Meagan Moore & Steven Royster    -->
 			<!--        This is the main login form         -->
-			<div class="form-group">
-				
 			<%= form_for(:login_session, url: login_path) do |f| %>
+			
+			<div class="form-group">		
 				<%= render 'layouts/flash' %>
-				
 				<%= f.label :user_name %>
 				<%= f.text_field :user_name, class: 'form-control'%>
 			</div>
@@ -25,10 +24,13 @@
 			</div>
 			
 			<br>
+			
 			<div class="form-group">
 				<%= f.submit "Log in", class: "btn btn-primary btn-lg center-block form-control custom-submit-width" %>
 			</div>
+			
 			<% end %>
+			
 			<br>
 			
 		</div>   <!-- end col --> 
