--- a/app/views/roster_squares/index.html.erb
+++ b/app/views/roster_squares/index.html.erb
@@ -1,4 +1,10 @@
 <p id="notice"><%= notice %></p>
+		
+<!--     flash    -->
+<!-- Meagan Moore -->
+<div class="form-group">		
+	<%= render 'layouts/flash' %>
+</div>
 
 <h1>Roster Squares</h1>
 
