--- a/app/views/roster_squares/new.html.erb
+++ b/app/views/roster_squares/new.html.erb
@@ -1,3 +1,10 @@
+		
+<!--     flash    -->
+<!-- Meagan Moore -->
+<div class="form-group">		
+	<%= render 'layouts/flash' %>
+</div>
+
 <h1>New Roster Square</h1>
 
 <%= render 'form', roster_square: @roster_square %>
