--- a/app/views/roster_squares/edit.html.erb
+++ b/app/views/roster_squares/edit.html.erb
@@ -1,6 +1,13 @@
 <!--Author: Michael Loptien and Ricky Perez -->
 <!--This page is used to display each students set of squares -->
 	<div class="container">
+		
+<!--     flash    -->
+<!-- Meagan Moore -->
+<div class="form-group">		
+	<%= render 'layouts/flash' %>
+</div>
+
 		<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
 			<!-- page header -->
 			<div class="page-header vertical-align">
