--- a/app/views/roster_squares/show.html.erb
+++ b/app/views/roster_squares/show.html.erb
@@ -1,3 +1,10 @@
+		
+<!--     flash    -->
+<!-- Meagan Moore -->
+<div class="form-group">		
+	<%= render 'layouts/flash' %>
+</div>
+
 <p id="notice"><%= notice %></p>
 
 <p>
