--- a/app/views/static_pages/about1.html.erb
+++ b/app/views/static_pages/about1.html.erb
@@ -2,6 +2,9 @@
 	<!-- page header -->
 	<!-- Another note from Carolyn C: again, if you are working on a page that you see while NOT logged in, you need to manually add the container and the div associated.-->
 	<div class="container">
+		<div class="form-group">		
+			<%= render 'layouts/flash' %>
+		</div>
 	<!--- Note from Carolyn C: all pages that are not logged (excluding the login screen) need this content col!-->
 	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
 		<div class="page-header vertical-align">
