--- a/app/views/teachers/home.html.erb
+++ b/app/views/teachers/home.html.erb
@@ -1,5 +1,4 @@
 <!-- @author: Matthew O & Alex P -->
-
 <!-- Control the selection and unselection of the student roster -->
 <script>
 	$(document).ready(function() {
@@ -15,7 +14,12 @@
 	});
 </script>
 
-
+<!--     flash    -->
+<!-- Meagan Moore -->
+<div class="form-group">		
+	<%= render 'layouts/flash' %>
+</div>
+			
 <!-- page header -->
 <div class="page-header vertical-align">
 	<div class="col-xs-11">
