--- a/app/views/graph/todo.html.erb
+++ b/app/views/graph/todo.html.erb
@@ -5,9 +5,13 @@
 <p><s>migrate code from test application</s></p>
 <p><s>confirm graphs work</s></p>
 <p><s>confirm heroku works</s></p>
-<p>code </p>
+<p>tests</p>
+<p>code sample data</p>
 <p>example page</p>
-<p>add /config/routes.rb and /app/controllers/application_controller.rb to ignore list for git</p>
+<p>revert /config/routes.rb and /app/controllers/application_controller.rb before merge w/ master</p>
 <p>create postgresql branch, confirm graphs and heroku still work</p>
 <p>implement group_by_date or find alternative</p>
 <p>investigate asynchronous loading</p>
+
+<h1>models</h1>
+<p>student has_many sessions, session has_many events</p>
