school select - dnf

--- a/app/views/schools/super.html.erb
+++ b/app/views/schools/super.html.erb
@@ -12,7 +12,7 @@
 				</div>
 			</div>
 		</div><!--End page header-->
-
+<%= render 'layouts/flash' %>
 <div class="row first-content-row">
 		<!-- Render the school focus spinner using form partial-->
 		 <%= render 'schoolSelect', school: @school %>
