--- a/app/views/schools/_schoolSelect.html.erb
+++ b/app/views/schools/_schoolSelect.html.erb
@@ -1,19 +1,25 @@
 <!-- UX Team. Edited by Robert Herrera -->
-<%= form_for(Teacher.first) do |f| %>
+<!-- dont use form partial unless submit button is styled. -->
+<%= form_for(@current_teacher, :url => {:action => "updateFocus"}) do |f| %>
+
+
 		<div class="row vertical-align">
 			<div class="form-group">
 				<label class="control-label col-xs-5" for="selectSch">Super focus school:</label>
 					<div class="col-xs-7">
 						<select class="form-control" id="selectSch">
                            	<% @schools.each do |school| %>
-                           	<option value="<%= school.full_name %>"><%= school.full_name %></option>
+                           	<option value="<%= school.id %>"><%= school.full_name %></option>
                            	 <% end %>
                         </select> 
 					</div>   <!-- col-->
+					  <div class="row action-buttons-row">
+	  						<div class="col-xs-6 col-xs-offset-1 text-center"> 
+       						 <%= f.submit "Submit", class: "btn btn-success"%>
+  			  			</div>
+ 						 </div>
+  
 	  		</div>   <!-- form group-->
 		</div>   <!-- row -->
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
 <% end %>
+
