--- a/app/views/teachers/home.html.erb
+++ b/app/views/teachers/home.html.erb
@@ -62,7 +62,7 @@
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="email">Student:</label>
 				<div class="col-sm-4">
-					<%= select_tag 'student_id', options_from_collection_for_select(@teacher.students, 'id', 'full_name'), {:required => true} %>
+					<%= select_tag 'school_id', options_from_collection_for_select(@teacher.students, 'id', 'full_name') %>
 				</div>
 			</div>
 		</div>
