--- a/app/views/roster_squares/edit.html.erb
+++ b/app/views/roster_squares/edit.html.erb
@@ -16,19 +16,20 @@
 				<!-- student behavior Squares -->
 				<div class="row squares-row first-content-row">
 					<!-- set the squares for the specific student-->
-			    <% @roster_squares.each do |roster_square| %>
-				    <% if roster_square.student_id == @students.id %>
-				      <% square_name = set_square_name(roster_square) %>
-				    	<% square_color = set_square_color(roster_square) %>
-					   	<div class="col-xs-2">
-							<div class="square i-<%= square_color %> text-center">
-								<div class="col-xs-12">
-									<h4><%=square_name%></h4>
-								</div>
-							</div><!--End Square-->
-						</div><!--End Col -->
+				    <%@roster_squares.each do |roster_square|%>
+					    <% if roster_square.student_id == @students.id %>
+					      <% square_name = set_square_name(roster_square) %>
+					    	<% square_color = set_square_color(roster_square) %>
+					    	<% square_id = set_square_id(roster_square) %>
+						   	<div class="col-xs-2">
+								<div class="square i-<%= square_color %> text-center">
+									<div class="col-xs-12">
+										<p><a href="/squares/<%=square_id%>/edit"><span><h4><%=square_name%></h4></span></a></p>		   		
+									</div>
+								</div><!--End Square-->
+							</div><!--End Col -->
+						<%end%>
 					<%end%>
-		    	<%end%>
 				</div><!--End Row -->
 	
 			<!-- Calls the edit from which is the add squares select and the submit button-->
