--- a/app/views/roster_squares/index.html.erb
+++ b/app/views/roster_squares/index.html.erb
@@ -18,7 +18,7 @@
         <td><%= roster_square.student_id %></td>
         <td><%= link_to 'Show', roster_square %></td>
         <td><%= link_to 'Edit', edit_roster_square_path(roster_square) %></td>
-        <td><%= link_to 'Destroy', roster_square, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', roster_square, method: :delete%></td>
       </tr>
     <% end %>
   </tbody>
